k8s-service/nginx-gateway-fabric/test/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: game-route
  namespace: default
spec:
  parentRefs:
    - name: game-gateway
  hostnames:
    - test-game.somaz.link
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mario
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: mario
          namespace: mario-ns
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /tetris
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /
      backendRefs:
        - name: tetris
          namespace: tetris-ns
          port: 80
